couple of minor cleanups